# ZiAPI

./: .gitignore
doc/: Doxyfile  Exception_8hpp_source.html  IMessage_8hpp_source.html  IModuleDescriptor_8hpp_source.html  IModule_8hpp_source.html  IRequest_8hpp_source.html  IResponse_8hpp_source.html  ModuleType_8hpp_source.html  ParsingError_8hpp_source.html  classzia_1_1api_1_1ConfigurationError-members.html  classzia_1_1api_1_1ConfigurationError__inherit__graph.map  classzia_1_1api_1_1IHttpModule-members.html  classzia_1_1api_1_1IModuleDescriptor.html  classzia_1_1api_1_1IModule__inherit__graph.map  classzia_1_1api_1_1INetworkModule__inherit__graph.md5  classzia_1_1http_1_1IMessage-members.html  classzia_1_1http_1_1IMessage.html  classzia_1_1http_1_1IMessage__inherit__graph.map  classzia_1_1http_1_1IRequest.html  classzia_1_1http_1_1IRequest__inherit__graph.md5  classzia_1_1http_1_1IResponse__inherit__graph.map  classzia_1_1net_1_1IConnection-members.html  dir_70ae3b51cd7b6c525ac94ab29e2ca8ba.html  dir_e50eeab23e6c24622984fa1775893dcc.html  graph_legend.html  inherit_graph_3.md5  inherit_graph_6.map  inherit_graph_6.md5  inherits.html  menudata.js  net_2Buffer_8hpp_source.html  structzia_1_1net_1_1Endpoint-members.html
docs/: Address_8hpp_source.html  ConfigKey_8hpp_source.html  ConfigurationError_8hpp_source.html  Connection_8hpp_source.html  Endpoint_8hpp_source.html  (+103 more)
examples/hello-world-http-module/: CMakeLists.txt  HelloWorldModule.cpp  HelloWorldModule.hpp
examples/ip-whitelist-network-module/: CMakeLists.txt  IpWhiteListModule.cpp  IpWhiteListModule.hpp
(+131 files in other folders)
